gitlab/gitlab-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  namespace: public-service
  labels:
    name: gitlab
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: ssh
      port: 22
      targetPort: ssh
  selector:
    name: gitlab
