gitlab/postgresql-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: public-service
  labels:
    name: postgresql
spec:
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
  selector:
    name: postgresql
