gitlab/redis-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: public-service
  labels:
    name: redis
spec:
  ports:
    - name: redis
      port: 6379
      targetPort: redis
  selector:
    name: redis
